@@ -1,3 +1,6 @@
+20130602 - fhabermann
+* added server side acl check to page and content controller
+
 20130528 - fhabermann
 * added save acl for page new and edit
 * added acl check on getContents
